--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^7.2.4"
     },
     "dependencies": {
+        "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
         "@rcade/plugin-input-classic": "^0.2.1"
     }
 }
