--- a/rcade.manifest.json
+++ b/rcade.manifest.json
@@ -5,7 +5,7 @@
   "description": "Don't you want to dance with me baby!",
   "visibility": "public",
   "authors": {
-    "display_name": "Claire Kwong"
+    "display_name": "Claire Kwong & Ben Kogan"
   },
   "dependencies": [
     {
